# InWork-MarketingOS-Backend

./: .dockerignore  .env.development.example  .env.example  .env.local.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: README.md  main.py  scheduler.py  worker.py
app/ai/: README.md  assistant.py  brand_extraction.py  consistency.py  content_review.py  cost_optimization.py  dashboard_signals.py  directives.py  engine.py  executive_brief.py  features.py  global_assistant.py  health_score.py  missing_info.py  opportunities.py  parsers.py  pricing.py  qa.py  recommendations.py  summary.py  usage.py  watchdog.py
app/api/: README.md  deps.py
app/core/: README.md  constants.py  dependencies.py  exceptions.py  logging.py  middleware.py  pagination.py  rate_limit.py  request_context.py  security.py
app/db/: README.md  base.py  mixins.py  session.py  types.py
app/integrations/: README.md  brave.py  crypto.py  scrapingbee.py  storage.py
app/models/: README.md  __init__.py  ai.py  ai_usage.py  alert.py  analytics.py  assignment.py  audit.py  base.py  brand_job.py  campaign.py  client.py  client_directive.py  client_profile.py  compliance.py  contact.py  conversation.py  document.py  enums.py  event.py  integration.py  intel_job.py  knowledge.py  notification.py  organization.py  plan.py  recommendation.py  report.py  strategy.py  upload.py  user.py
app/prompts/: README.md  loader.py
app/repositories/: README.md  ai_chat_repository.py  ai_usage_repository.py  alert_repository.py  base.py  (+22 more)
docs/: API-REFERENCE.md
migrations/: README.md  env.py
scripts/: README.md  run_local.sh  seed_data.py  start.sh
tests/: README.md  conftest.py  helpers.py
(+260 files in other folders)
